Added basic styling, favicon, headshot image

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oliver Ridsdale</title>
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
-<body>
 
-    <h1>Hello World</h1>
+<body>
+    <section class="introduction">
+        <figure class="headshot">
+            <img class="headshot__image" src="/assets/oliver.jpg" alt="Headshot of Oliver">
+        </figure>
+        <h1 class="introduction__title">Hi, I'm <span class="underline">Oliver Ridsdale</span></h1>
+        <p class="introduction__supporting">Web Developer</p>
+    </section>
+
+    <hr class="section-rule"/>
+
     
 </body>
 </html>
