Updated responsivity, added social links

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,19 @@
         <figure class="headshot">
             <img class="headshot__image" src="/assets/oliver.jpg" alt="Headshot of Oliver">
         </figure>
-        <h1 class="introduction__title">Hi, I'm <span class="underline">Oliver Ridsdale</span></h1>
-        <p class="introduction__supporting">Web Developer</p>
+        <div class="introduction__text">
+            <h1 class="introduction__title">Hi, I'm <span class="underline">Oliver Ridsdale</span></h1>
+            <p class="introduction__supporting">Web Developer</p>
+        </div>
+        
     </section>
 
     <hr class="section-rule"/>
+
+    <section class="social-links">
+        <a href="https://github.com/ollieri3">Github</a>
+        <a href="https://twitter.com/ORidsdale">Twitter</a>
+    </section>
 
     
 </body>
