Use compressed jpg

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="introduction">
         <figure class="headshot">
-            <img class="headshot__image" src="/assets/oliver.jpg" alt="Headshot of Oliver">
+            <img class="headshot__image" src="/assets/oliver-compressed.jpg" alt="Headshot of Oliver">
         </figure>
         <div class="introduction__text">
             <h1 class="introduction__title">Hi, I'm <span class="underline">Oliver Ridsdale</span></h1>
